<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactBook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="avatar">导入头像</string>
    <string name="name">姓名 :</string>
    <string name="phone">手机 :</string>
    <string name="email">邮箱 :</string>
    <string name="addr">地址:</string>
    <string name="group">组别 :</string>
    <string name="spinner_group">加入分组</string>
</resources>
