<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
    <TableRow android:id="@+id/TableRow01" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="20dp">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/avatar"
			android:textSize="16px" android:layout_marginLeft="10dp"></TextView>
	     <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp"
            android:scaleType="fitXY"/>
	</TableRow>
        
    <TableRow android:id="@+id/TableRow02" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="80dp">
		<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/name"
			android:textSize="16px" android:layout_marginLeft="10dp"></TextView>
		<EditText android:id="@+id/EditText02" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:layout_marginRight="10dp" />
	</TableRow>
	
      <TableRow android:id="@+id/TableRow03" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="20dp">
		<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/phone"
			android:textSize="16px" android:layout_marginLeft="10dp"></TextView>
		<EditText android:id="@+id/EditText03" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:layout_marginRight="10dp"/>
	</TableRow>
	
    <TableRow android:id="@+id/TableRow04" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="20dp">
		<TextView android:id="@+id/TextView04" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/addr"
			android:textSize="16px" android:layout_marginLeft="10dp"></TextView>
		<EditText android:id="@+id/EditText04" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:layout_marginRight="10dp"/>
	</TableRow>
	
    <TableRow android:id="@+id/TableRow05" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="20dp">
		<TextView android:id="@+id/TextView05" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/email"
			android:textSize="16px" android:layout_marginLeft="10dp"></TextView>
		<EditText android:id="@+id/EditText05" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:layout_marginRight="10dp"/>
	</TableRow>
	
     <TableRow android:id="@+id/TableRow06" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="20dp">
		<TextView android:id="@+id/TextView06" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/group"
			android:textSize="16px" android:layout_marginLeft="10dp"></TextView>
		<EditText android:id="@+id/EditText06" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:layout_marginRight="10dp"/>
	</TableRow>
	
    </LinearLayout>
    

</ScrollView>
